new color and string res

--- a/wordgap-client/res/values/strings.xml
+++ b/wordgap-client/res/values/strings.xml
@@ -1,4 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">WordGap</string>
+    <string name="my_exercises">My Exercises</string>
+    <string name="default_exercises">Default Exercises</string>
+    <string name="enter_ip">Please enter IP address of the server</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="marked_words">Marked Words</string>
+    <string name="share">share</string>
+    <string name="own">own</string>
+    <string name="choose_app_wordlist">To which app do you want to send the word list?</string>
+    <string name="empty_wordlist">Your word list is empty</string>
+    <string name="no_words_added_to_wordlist">You have not yet added any words to your word list!</string>
+    <string name="wordgap">wordgap</string>
+    <string name="verbs">Verbs</string>
+    <string name="nouns">Nouns</string>
+    <string name="adjectives">Adjectives</string>
+    <string name="prepositions">Prepositions</string>
+    <string name="loading_webpage">Loading webpage</string>
+    <string name="connecting_to_server">Connecting to web server, please wait</string>
+    <string name="choose_pos">Please chose the part of speech</string>
+    <string name="default_ip">"127.0.0.1"</string>
+    <string name="ip">IP</string>
+    <string name="error">Error</string>
+    <string name="network_deactivated">The network is deactivated. Please check your network settings.</string>
+    <string name="error_text">The text could not be loaded or is too short (min. 300 words).</string>
+    <string name="error_server">Sorry, there is a problem with the server - please try again later.</string>
+    <string name="error_url">WordGap did not receive a valid URL! No exercise created!</string>
+    <string name="creating_ex">Creating exercise, please wait.</string>
+    <string name="choose_app_exercise">To which app would you like to send the exercise?</string>
+    <string name="delete_file">Delete file</string>
+    <string name="open_ex">Open exercise</string>
+    <string name="do_ex">Would you like to do this exercise now:\u0020 </string>
+    <string name="error_file">Could not read folder or file!</string>
+    <string name="dir">Directory</string>
+    <string name="new_ex">Create new exercise from: </string>
+    <string name="definition">Definition:</string>
+    <string name="loading_def">Loading definitions</string>
+    <string name="wordslist_filename">markedwords.csv</string>
+    <string name="of">of</string>
+    <string name="back">Back</string>
+    <string name="next">Next</string>
+    <string name="mark_word">Mark word</string>
+    <string name="prep_not_available">This feature is not available for prepositions!</string>
+    <string name="added_to_wordlist"> \u0020 added to word list!</string>
+    <string name="correct">&quot; is correct!&quot;</string>
+    <string name="incorrect">&quot; is not correct!&quot;</string>
+    <string name="new_">New</string>
+    <string name="press_again">Press again to quit.</string>
+    <string name="export">Export</string>
+    <string name="word_list">Word List</string>
+    <string name="quit">Quit</string>
+    <string name="percent">percent</string>
+    <string name="total_score">Your total score</string>
+    <string name="sentence">Sentence</string>
 </resources>
